# ML_Practice

./: .gitignore  PythonBasic-2.ipynb  PythonBasic-3.ipynb  PythonBasic-4.ipynb  PythonBasic.ipynb  PytorchMLP.ipynb  README.md  RatingProgram.py  config.json  process_A.ipynb  process_A2.ipynb  process_A3.ipynb  process_A4.ipynb  process_A5.ipynb  process_B1.ipynb  process_B2.ipynb  process_B3.ipynb  process_B4.ipynb  process_C.ipynb  process_C1.ipynb  process_C2.ipynb  process_C3.ipynb  process_D1.ipynb  process_E1.ipynb  process_E2.ipynb  process_F1.ipynb  pyproject.toml  scikit-learn-gmm.ipynb  scikit-learn-intro.ipynb  scikit-learn-k-means.ipynb  scikit-learn-linear-reg.ipynb  scikit-learn-pca.ipynb  scikit-learn-random-forest.ipynb  scikit-learn-svm.ipynb  scikit-learn-validation.ipynb
