[project]
name = "ML-practice"
version = "0.1"
dependencies = [
    "jupyter",
    "matplotlib",
    "openpyxl>=3.1.5",
    "scikit-learn",
    "seaborn",
    "torch",
    "torchvision",
    "tqdm",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126"}
]
torchvision = [
    { index = "pytorch-cu126"}
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true